# dilemme_prisonnier

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  annotated.html  classes.html  client_8c.html  client_8c__incl.map  client_8c__incl.md5  client_8c_source.html  client__thread_8c.html  client__thread_8c__incl.map  client__thread_8c__incl.md5  client__thread_8c_ace4bd605e2dba281dc8d32f26875c14e_icgraph.map  client__thread_8c_ace4bd605e2dba281dc8d32f26875c14e_icgraph.md5  client__thread_8c_source.html  client__thread_8h_source.html  configuration_8c.html  configuration_8c__incl.map  configuration_8c__incl.md5  configuration_8c_source.html  configuration_8h_source.html  datacontext_8c.html  datacontext_8c__incl.map  datacontext_8c__incl.md5  datacontext_8c_source.html  datacontext_8h_source.html  deroulement_8c.html  deroulement_8c__incl.map  deroulement_8c__incl.md5  deroulement_8c_source.html  deroulement_8h_source.html  dir_167790342fb55959539d550b874be046.html  dir_2d63037d3c90bbd3001cbce1db844cde.html  dir_4fb938b57eeb85771cb360ec0d5defc8.html  dir_9dfac10afa27acd24978061a362cdff6.html  dir_ba0972b727b42227c7b21a05f81969c9.html  (+89 more)
.circleci/: config.yml
include/: error_handler.h  resolv.h
scripts/: build.sh  generate-config.sh
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  (+3 more)
shared/error_handler/: error_handler.c
shared/ligne/: ligne.c  ligne.h
shared/resolv/: resolv.c
src/: main.c  template.c  template.h
src/client/: CMakeLists.txt  client.c
src/client/error_handler/: error_handler.c  error_handler.h
src/client/ligne/: ligne.c
src/client/resolv/: resolv.c
src/communication/: client.c  client.h  server.c  server.h
src/deroulement/: match.c  match.h  mitemps.c  mitemps.h  preparation.c  preparation.h
src/model/: score.c  score.h
src/server/: CMakeLists.txt  server.c
src/server/deroulement/: CMakeLists.txt  deroulement.c  deroulement.h  match_thread.c  match_thread.h  mitemps.c  mitemps.h  preparation.c  preparation.h
src/server/error_handler/: error_handler.c
src/server/ligne/: ligne.c
src/server/model/: CMakeLists.txt  client_thread.c  client_thread.h  configuration.c  configuration.h  datacontext.c  datacontext.h  joueur.c  joueur.h  match.c  match.h  score.h
src/server/view/: CMakeLists.txt  joueur_view.c  joueur_view.h  match_view.c  match_view.h
src/view/: score_view.c  score_view.h
tests/: template_test.c
(+21 files in other folders)
